fixed image breaking out of container

--- a/src/components/ItemCard/ItemCard.module.sass
+++ b/src/components/ItemCard/ItemCard.module.sass
@@ -1,21 +1,26 @@
 @use '../base'
 
 .card
+    overflow: hidden
 
-    .img_container
+    .img_container 
         display: flex
-        justify-content: center
         align-items: center
-        min-height: 75%
+        justify-content: center
+        width: 100%
+        height: 75%
+        margin-bottom: 1rem
 
-    img
-        width: 80%
+    img 
+        display: block
+        margin: 0 auto
+        width: 100%
         max-width: 300px
-        max-height: 100%
+        max-height: 300px
 
 .info
-    margin-top: 1rem
-    min-height: 25%
+    height: 25%
+    min-height: 3.5em
     width: 90%
     display: flex
     flex-direction: column
